[package]
name = "permafrost"
version = "0.1.0"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# ENV
dotenv = "0.15.0"

# API docs
schemars = "0.8.0"
okapi = "0.6.0-alpha-1"
rocket_okapi = "0.7.0-alpha-1"

# Webserver
rocket = { version = "0.5.0-rc.1", features = ["json"] }

# Database
diesel = { version = "1.4.4", features = [
    "sqlite", "chrono", "uuid", "r2d2"
]}
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
git2 = "0.13"
hex = "0.4.2"

# Serialization/Deserialization
serde_json = "1.0.64"
serde = "1.0.126"
serde_derive = "1.0.126"
